[metadata]
name = gxtk-cat-bro
version = 0.0.1.dev0
author = Catherine B
author_email = cjbromheadATgmailDOTcom
description = Compact command line utility for galaxy API tool panel queries and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cat-bro/gxtk
project_urls =
    Bug Tracker = https://github.com/cat-bro/gxtk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gxtk = src.gxtk:main


